# powerbi-regression-tester

./: .gitignore  P9.py  Power BI Regression Tester.py  PowerBIRegressionTester.py  PowerBIRegressionTesterApp - tkSheet.py  PowerBIRegressionTesterApp.py  PowerBIRegressionTesterApp.spec  README.md  Regression Compare.py  Regression copy.py  Regression.py  Sales & Returns Sample v201912-2.json  Sales & Returns Sample v201912.json  Setup pyadomd.py  SetupPyadomd.py  T2.ipynb  T3.ipynb  T4.ipynb  TestADOMD.py  Testing.ipynb  Traverse json.ipynb  baseline.csv  custom.pth  filtered_df.csv  filtered_df.parquet  main.py  pyadomd.txt  pyproject.toml  readme.txt  runtime_load_adomd_dll.py  verify_pyadomd_hook.py
Archive Code/: P8.py
Contoso pbip/Query Files/DAX Studio/: Contoso pbip 2.json  Contoso pbip.json  DAX Studio All Queries Export.json
Contoso pbip/Query Files/PBI Performance Analyzer/: PowerBIPerformanceData.json
Sales & Returns Sample/Query Files/PBI Performance Analyzer/: Sales & Returns Sample v201912-2.json
Sales & Returns Sample/baseline/: baseline.csv  baseline.parquet
Semantic Model Regression Tester/: PowerBIRegressionTester.py  PowerBIRegressionTesterApp-Folder.spec  PowerBIRegressionTesterApp.py  PowerBIRegressionTesterApp.spec  custom.pth  readme.md  requirements.txt
Semantic Model Regression Tester/Archive Code/: Power BI Regression Tester.py  SetupPyadomd.py  T3.ipynb
Semantic Model Regression Tester/pyadomd/: pyadomd.py
baseline/: baseline.csv  baseline.parquet
